--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GoogleAnalyticsAccount</li>
+
+<li>$:/GoogleAnalyticsDomain</li>
+
 <li>$:/Import</li>
 
 <li>$:/isEncrypted</li>
@@ -132,6 +136,8 @@ Error message and password prompt
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/plugin-info--1529721954-$:/plugins/tiddlywiki/googleanalytics---1403365463</li>
 
 <li>$:/state/showeditpreview</li>
 
@@ -7938,6 +7944,12 @@ Error message and password prompt
 <pre>Home
 </pre>
 </div>
+<div created="20161107160720544" modified="20161107160721738" title="$:/GoogleAnalyticsAccount">
+<pre>UA-109815-12</pre>
+</div>
+<div created="20161107160730633" modified="20161107160742985" title="$:/GoogleAnalyticsDomain">
+<pre>sycom.git---.io</pre>
+</div>
 <div status="complete" title="$:/Import">
 <pre>The following tiddlers were imported:
 
@@ -7972,6 +7984,9 @@ Error message and password prompt
 <div created="20161107154846009" modified="20161107154902099" title="$:/SiteTitle">
 <pre>My ~TiddlyWiki fast test</pre>
 </div>
+<div created="20161107160610532" modified="20161107160610532" title="$:/state/plugin-info--1529721954-$:/plugins/tiddlywiki/googleanalytics---1403365463">
+<pre>usage</pre>
+</div>
 <div created="20161107155558576" modified="20161107155558576" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
@@ -7993,10 +8008,10 @@ Error message and password prompt
 <div created="20161107155435179" modified="20161107155446618" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20161107155120471" modified="20161107155433394" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20161107155120471" modified="20161107160556297" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
-<div list="$:/plugins/tiddlywiki/googleanalytics Home" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20161107155250346" modified="20161107155303058" title="$:/temp/advancedsearch">
@@ -8043,7 +8058,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;null&quot;
+            &quot;text&quot;: &quot;file://&quot;
         }
     }
 }</pre>
