--- a/index.html
+++ b/index.html
@@ -7958,11 +7958,11 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div author="JeremyRuston" contributor="Sylvain Comte" core-version="&gt;=5.0.0" dependents="" description="Google Analytics: website statistics" list="readme usage" plugin-type="plugin" title="$:/plugins/tiddlywiki/googleanalytics" type="application/json" version="5.1.15-sycom">
+<div author="JeremyRuston" contributor="Sylvain Comte" core-version="&gt;=5.0.0" dependents="" description="Google Analytics: website statistics" list="readme usage" plugin-type="plugin" title="$:/plugins/tiddlywiki/googleanalytics" type="application/json" version="5.1.100">
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;$:/plugins/tiddlywiki/googleanalytics/googleanalytics.js&quot;: {
-            &quot;text&quot;: &quot;/*\\\r\ntitle: $:/plugins/tiddlywiki/googleanalytics/googleanalytics.js\r\ntype: application/javascript\r\nmodule-type: startup\r\n\r\nRuns Google Analytics with the account number in the tiddler `$:/GoogleAnalyticsAccount` and the domain name in `$:/GoogleAnalyticsDomain`\r\n\r\n\\*/\r\n(function(){\r\n\r\n/*jslint node: true, browser: true */\r\n/*global $tw: false */\r\n\&quot;use strict\&quot;;\r\n\r\n// Export name and synchronous status\r\nexports.name = \&quot;google-analytics\&quot;;\r\nexports.platforms = [\&quot;browser\&quot;];\r\nexports.synchronous = true;\r\n\r\nvar GA_ACCOUNT,GA_DOMAIN;\r\n\r\nexports.startup = function() {\r\n\t(function() {\r\n\t\t(function(i,s,o,g,r,a,m){\r\n\t\tconsole.log(\&quot;analytics launched\&quot;);\r\n\t\ti['GoogleAnalyticsObject']=r;\r\n\t\ti[r]=i[r]||function(){\r\n   \t\t(i[r].q=i[r].q||[]).push(arguments)\r\n\t\t\t},\r\n\t\t\ti[r].l=1*new Date();\r\n\t\ta=s.createElement(o),\r\n\t\t\tm=s.getElementsByTagName(o)[0];\r\n\t\ta.async=1;\r\n\t\ta.src=g;\r\n\t\tm.parentNode.insertBefore(a,m)\r\n   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga')\r\n\tGA_ACCOUNT = $tw.wiki.getTiddlerText(\&quot;$:/GoogleAnalyticsAccount\&quot;),\r\n\t\tGA_DOMAIN = $tw.wiki.getTiddlerText(\&quot;$:/GoogleAnalyticsDomain\&quot;);\r\n\tif (GA_DOMAIN == \&quot;\&quot; || GA_DOMAIN == undefined) GA_DOMAIN = \&quot;auto\&quot;;\r\n\tconsole.log(\&quot;tiddlywiki analytics working with \&quot;+GA_ACCOUNT+\&quot; - \&quot;+GA_DOMAIN);\r\n   ga('create', GA_ACCOUNT,GA_DOMAIN);\r\n   console.log(\&quot;analytics created\&quot;);\r\n   ga('send', 'pageview');\r\n   console.log('analytics sent');\r\n\t})();\r\n};\r\n\r\n})();\r\n&quot;,
+            &quot;text&quot;: &quot;/*\\\r\ntitle: $:/plugins/tiddlywiki/googleanalytics/googleanalytics.js\r\ntype: application/javascript\r\nmodule-type: startup\r\n\r\nRuns new \&quot;i s o g r a m\&quot; Google Analytics with the account number in the tiddler `$:/GoogleAnalyticsAccount` and the domain name in `$:/GoogleAnalyticsDomain`\r\n\r\n\\*/\r\n(function(){\r\n\r\n/*jslint node: true, browser: true */\r\n/*global $tw: false */\r\n\&quot;use strict\&quot;;\r\n\r\n// Export name and synchronous status\r\nexports.name = \&quot;google-analytics\&quot;;\r\nexports.platforms = [\&quot;browser\&quot;];\r\nexports.synchronous = true;\r\n\r\nvar GA_ACCOUNT,GA_DOMAIN;\r\n\r\nexports.startup = function() {\r\n\t// getting parameters\r\n\tGA_ACCOUNT = $tw.wiki.getTiddlerText(\&quot;$:/GoogleAnalyticsAccount\&quot;),\r\n\t\tGA_DOMAIN = $tw.wiki.getTiddlerText(\&quot;$:/GoogleAnalyticsDomain\&quot;);\r\n\tif (GA_DOMAIN == \&quot;\&quot; || GA_DOMAIN == undefined) GA_DOMAIN = \&quot;auto\&quot;;\r\n\tconsole.log(\&quot;tiddlywiki analytics working with \&quot;+GA_ACCOUNT+\&quot; - \&quot;+GA_DOMAIN);\r\n\t// using ga \&quot;isogram\&quot; function\r\n  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){\r\n  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),\r\n  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)\r\n  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');\r\n\r\n  ga('create', 'UA-109815-12', 'auto');   console.log(\&quot;analytics created\&quot;);\r\n  ga('send', 'pageview');    console.log('analytics sent');\r\n};\r\n\r\n})();\r\n&quot;,
             &quot;title&quot;: &quot;$:/plugins/tiddlywiki/googleanalytics/googleanalytics.js&quot;,
             &quot;type&quot;: &quot;application/javascript&quot;,
             &quot;module-type&quot;: &quot;startup&quot;
@@ -8011,7 +8011,7 @@ Error message and password prompt
 <div created="20161107155120471" modified="20161107160556297" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div list="$:/Import Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20161107155250346" modified="20161107155303058" title="$:/temp/advancedsearch">
@@ -8058,7 +8058,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/origin&quot;: {
             &quot;title&quot;: &quot;$:/info/url/origin&quot;,
-            &quot;text&quot;: &quot;file://&quot;
+            &quot;text&quot;: &quot;null&quot;
         }
     }
 }</pre>
